# libkml

./: .travis.yml  CMakeLists.txt  ChangeLog  DEPENDENCIES  INSTALL  KMLConfig-install.cmake.in  KMLConfig.cmake.in  Makefile.am  README  README.md  SConstruct  autogen.sh  configure.ac  libkml.sln  mk-archive.sh
examples/: CMakeLists.txt  Makefile.am  examples.sln
examples/domviewer/: CMakeLists.txt  domviewer.py  setpath
examples/engine/: CMakeLists.txt  Makefile.am  balloonwalker.cc  change.cc  clone.cc  csv2kml.cc  csvinfo.cc  import.cc  inlinestyles.cc  kml2kmz.cc  kmlfile.cc  oldschema.cc  parsebig.cc  printstyle.cc  printstyle.vcproj  printstyle.vcxproj  printstyle.vcxproj.filters  resolvestyles.cc  splitstyles.cc  streamkml.cc
examples/gpx/: CMakeLists.txt  Makefile.am  gpxtracktokml.cc
examples/gx/: CMakeLists.txt  Makefile.am  featuretour.cc  gpxfly.cc
examples/hellonet/: CMakeLists.txt  Makefile.am  SConstruct  csvurl2gmap.cc  curlfetch.cc  curlfetch.h  getgmapkml.cc  getgsheetcsv.cc  getgsheetkml.cc  gsheet2gmap.cc  kmlwalk.cc  kmzfetch.cc  listfeed.cc  listgdocs.cc  listgmaps.cc  listgphotos.cc  prompt.h  resolvestyle.cc  searchgmap.cc  uploadgmap.cc  uploadgmapcsv.cc  uploadgmapkml.cc  uploadgsheet.cc  xsdprint.cc
examples/helloworld/: CMakeLists.txt  Makefile.am  SConstruct  checklinks.cc  circlegen.cc  countkml.cc  createkml.cc  createkml.vcproj  createkml.vcxproj  createkml.vcxproj.filters  helloattrs.cc  helloenum.cc  hellofeatures.cc  hellofolder.cc  hellogeometry.cc  hellohref.cc  hellokmz.cc  helloregion.cc  helloserializer.cc  helloworld.cc  parsebuf.cc  parsekml.cc  parsekml.vcproj  parsekml.vcxproj  parsekml.vcxproj.filters  parsens.cc  prettykml.cc  prettykml.vcproj  prettykml.vcxproj  prettykml.vcxproj.filters  print.cc  print.h  printgeometry.cc  sharedstyles.cc  simplifylines.cc  sortplacemarks.cc  sortplacemarks.vcproj  sortplacemarks.vcxproj  sortplacemarks.vcxproj.filters
examples/java/: CMakeLists.txt  CreateFolder.java  CreatePlacemark.java  WalkFeatures.java  run.sh
examples/kml/: CMakeLists.txt  allstyles.kml  extendeddata.kml  folder.kml  inline-stylemap.kml  kmlsamples.kml  styles.kml  time.kml
examples/perl/: helloplacemark.pl  hellowalk.pl
examples/php/: README  helloplacemark_module.php  helloplacemark_wrapper.php  hellowalk.php  load_kmldom.php  tweak_generated_kmldom.php
examples/python/: CMakeLists.txt  helloenum.py  hellogeometry.py  hellolocation.py  helloplacemark.py  hellopoint.py  hellovector.py  hellowalk.py  parse_point_placemark.py
examples/regionator/: CMakeLists.txt  Makefile.am  csvregionator.cc  csvregionator.vcproj  csvregionator.vcxproj  csvregionator.vcxproj.filters  kmlregionator.cc
examples/ruby/: helloplacemark.rb  hellovector.rb  hellowalk.rb  setpath.rb
examples/wxregionator/: Makefile.am  README  Regionator-Info.plist  UpgradeLog.htm  main.cc  main.h  wxregionator.cc  wxregionator.h  wxregionator.sln  wxregionator.vcproj  wxregionator.vcxproj  wxregionator.vcxproj.filters
examples/wxviewer/: Makefile.am  README  icon_file.xpm  icon_folder_closed.xpm  icon_folder_opened.xpm  wxviewer-Info.plist  wxviewer.cc  wxviewer.h
examples/xsd/: CMakeLists.txt  Makefile.am  kml-aliases.txt  xsdchildren.cc  xsdcoverage.cc  xsdelements.cc  xsdenums.cc  xsdfind.cc  xsdtypes.cc
msvc/: libkml.sln  (+19 more)
msvc/tests/: Makefile.am  UpgradeLog.htm  exec_tests.bat  libkml_tests.sln  libkmlbase_attributes_test.vcproj  libkmlbase_attributes_test.vcxproj  libkmlbase_attributes_test.vcxproj.filters  libkmlbase_color32_test.vcproj  libkmlbase_color32_test.vcxproj  libkmlbase_color32_test.vcxproj.filters  libkmlbase_date_time_test.vcproj  libkmlbase_date_time_test.vcxproj  libkmlbase_date_time_test.vcxproj.filters  libkmlbase_expat_handler_ns_test.vcproj  libkmlbase_expat_handler_ns_test.vcxproj  libkmlbase_expat_handler_ns_test.vcxproj.filters  libkmlbase_expat_parser_test.vcproj  libkmlbase_expat_parser_test.vcxproj  libkmlbase_expat_parser_test.vcxproj.filters  libkmlbase_file_test.vcproj  libkmlbase_file_test.vcxproj  libkmlbase_file_test.vcxproj.filters  libkmlbase_math_util_test.vcproj  libkmlbase_math_util_test.vcxproj  libkmlbase_math_util_test.vcxproj.filters  libkmlbase_net_cache_test.vcproj  libkmlbase_net_cache_test.vcxproj  libkmlbase_net_cache_test.vcxproj.filters  libkmlbase_referent_test.vcproj  libkmlbase_referent_test.vcxproj  libkmlbase_referent_test.vcxproj.filters  libkmlbase_string_util_test.vcproj  libkmlbase_string_util_test.vcxproj  libkmlbase_string_util_test.vcxproj.filters  libkmlbase_tempfile_test.vcproj  libkmlbase_tempfile_test.vcxproj  libkmlbase_tempfile_test.vcxproj.filters  libkmlbase_tests.sln  libkmlbase_time_util_test.vcproj  libkmlbase_time_util_test.vcxproj  (+171 more)
src/swig/: CMakeLists.txt  Makefile.am  SConscript  kmlbase.i  kmlbase_test.py  kmldom.i  kmldom_test.py  kmlelements.i  kmlengine.i  kmlengine_test.py  run-java-tests.sh
testdata/kml/: 100_nested_folders.kml  101_nested_elements.kml  101_nested_folders.kml  Makefile.am  all-altitudemodes-golden.kml  all-altitudemodes.kml  all-arrays-golden.kml  all-arrays.kml  all-itemicon-states-golden.kml  all-itemicon-states-input.kml  all-unknown-attrs-golden.kml  all-unknown-attrs-input.kml  all-unknown-golden.kml  all-unknown-input.kml  badcoords-golden.kml  badcoords.kml  billion.kml  ge-point.kml  gnis-ak-first-101.kml  golf-style.kml  invalid_descriptions.kml  kmlsamples.kml  model-macky.kml  old_schema_example.kml  outline_space.kml  photooverlay-zermatt.kml
testdata/kmz/: Makefile.am  bad-pk-data.kmz  bad-too-large.kmz  camels.kml  doc.kml  doc.kmz  hier.kmz  outside.kml  overflow_bad_offset.kmz  overflow_corrupted_stack.kmz  overflow_unzOpenCurrentFile.kmz  overflow_unzReadCurrentFile.kmz  radar-animation.kmz
testdata/style/: Makefile.am  Makefile.in  allstyles-f0-normal-check.kml  allstyles.kml  dup-id-normal-check.kml  dup-id.kml  ge-point-inline-style-check.kml  kmlsamples-inline-style-check.kml  nesting.kml  remote-styleurl-document-check.kml  remote-styleurl-folder-check.kml  remote-styleurl-placemark-style-both-check.kml  (+4 more)
(+656 files in other folders)
