add_subdirectory(domviewer)
add_subdirectory(engine)
add_subdirectory(gpx)
add_subdirectory(gx)
add_subdirectory(hellonet)
add_subdirectory(helloworld)
add_subdirectory(java)
add_subdirectory(kml)
# add_subdirectory(perl)
# add_subdirectory(php)
add_subdirectory(python)
#add_subdirectory(ruby)
add_subdirectory(regionator)
# add_subdirectory(wxregionator)
# add_subdirectory(wxviewer)
add_subdirectory(xsd)

