EXTRA_DIST = \
	exec_tests.bat \
	libkmlbase_attributes_test.vcproj \
	libkmlbase_color32_test.vcproj \
	libkmlbase_date_time_test.vcproj \
	libkmlbase_expat_handler_ns_test.vcproj \
	libkmlbase_file_test.vcproj \
	libkmlbase_net_cache_test.vcproj \
	libkmlbase_referent_test.vcproj \
	libkmlbase_string_util_test.vcproj \
	libkmlbase_tempfile_test.vcproj \
	libkmlbase_tests.sln \
	libkmlbase_tile_util_test.vcproj \
	libkmlbase_uri_parser_test.vcproj \
	libkmlbase_util_test.vcproj \
	libkmlbase_vec3_test.vcproj \
	libkmlbase_xmlns_test.vcproj \
	run_tests.bat \
	stdafx.cpp \
	stdafx.h

